--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -32,26 +32,26 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
 }
 
 .hour_hand{
     position: absolute;
-    top: -25px;
-    left: 150px;
-    /* transform: rotate(60deg); */
+    top: 5%;
+    left: 21%;
+
 }
 
 .minute_hand{
     position: absolute;
-    top:  -25px;
-    left: 150px;
-    /* transform: rotate(60deg); */
+    top:  5%;
+    left: 21%;
+
 }
 
 .second_hand{
     position: absolute;
-    top:  -25px;
-    left: 150px;
-    /* transform: rotate(6deg); */
+    top:  5%;
+    left: 21%;
+
 }
