modified the position so that it is responsive

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,57 +1,48 @@
+.clock{
+    border: 3px solid black;
+    text-align: center;
+    margin: auto;
+    position: relative;
+}
+
 .digi_clock12{
     display: none;
     margin: auto;
-    width: 50%;
-    border: 3px solid black;
+    /* width: 50%; */
     padding: 10px;
     text-align: center;
     font-weight: bold;
+    position: relative;
 }
 
-#btn{
-   float: right;
-   margin-top: 25px;
-   margin-right: 70px;
+
+
+#btn_container{
+    display: inline-block;
 }
 
 .digi_clock{
     margin: auto;
-    width: 50%;
-    border: 3px solid black;
+    /* width: 300px; */
     padding: 10px;
     text-align: center;
     font-weight: bold;
-}
-.analogue_clock{
+    display: inline-block;
     position: relative;
-    margin-top: 20px;
 }
 
-.clock_face{
+#container {
+    padding-bottom: 50%;
+    overflow: hidden;
+    text-align: center;
+}
+  #container div {
     position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
 }
-
-.hour_hand{
-    position: absolute;
-    top: 5%;
-    left: 21%;
-
-}
-
-.minute_hand{
-    position: absolute;
-    top:  5%;
-    left: 21%;
-
-}
-
-.second_hand{
-    position: absolute;
-    top:  5%;
-    left: 21%;
-
+  div >  img {
+      position: absolute;
+      width: 300px;
+      left: 40%;
+      /* margin-left: 150px; */
+      height: auto;
 }
